style/styles.css
/* Style Sheet for our project */
body {
    background-image: url("https://images4.alphacoders.com/574/thumb-1920-574726.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
  }

  .flex-container{
    display: flex;
    height: 80%;
  
}
.flex-item{
    width: 60%;
    padding: 10%;
    margin: 5%;
    background-color: rgb(255, 255, 255);
    color: white;
    text-align: center;
    border-radius: 25px;
    border-style: ridge;
}
.translucent-panel{
    height: 80%;
    background-color: rgba(255, 255, 255, 0.473);
    text-align: center;
    border-radius: 10px;
}
#translucent-box{
    
    justify-content: center;
}

#container1{
    justify-content: space-around;
}
#containerbtn{
    justify-content: space-between;
}

#start-screen {
    background-image: url(/assets/temple.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebackone {
    background-image: url(/assets/junglebackground.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebacktwo {
    background-image: url(/assets/durant.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebackthree {
    background-image: url(/assets/kleavor.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebackfour {
    background-image: url(/assets/river.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebackfive {
    background-image: url(/assets/kleavor2.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebacksix {
    background-image: url(/assets/junglenight.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebackseven {
    background-image: url(/assets/feraligatr.webp);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebackeight {
    background-image: url(/assets/zarude.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}
#pagebacknine {
    background-image: url(/assets/mewtemple.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 85%;
}

